[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "replit-pytest"
version = "0.1.0"
[tool.poetry.dependencies]
pytest = "^5.4"
python = "^3.7"
mypy = "^0.770.0"
[tool.poetry.dev-dependencies]
